walkthroughs/howto-k8s-meshdemo/kubernetes/app/kustomize/base/cats.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cats
  labels:
    name: cats
  namespace: meshdemo
spec:
  ports:
  - port: 8080
  selector:
    name: cats
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cats
  namespace: meshdemo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: cats
    spec:
      serviceAccountName: xray-access
      containers:
      - name: cats
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/meshdemo/cats:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: xray-daemon
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/temporary/aws-xray-daemon:0.5
        securityContext:
          runAsUser: 1337
        ports:
        - containerPort: 2000
          name: xray
          protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
      - name: envoy
        image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.12.1.0-prod
        ports:
        - containerPort: 9901
          name: stats
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          runAsUser: 1337
      serviceAccountName: xray-access
      securityContext:
        fsGroup: 65534
---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: cats
  namespace: meshdemo
spec:
  meshName: meshdemo
  virtualRouter:
    listeners:
      - portMapping:
          port: 8080
          protocol: http
  routes:
    - name: cats-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: cats
              weight: 1
