walkthroughs/howto-k8s-meshdemo/kubernetes/app/kustomize/base/colors.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: colors
  labels:
    name: colors
  namespace: meshdemo
spec:
  ports:
  - port: 8080
  selector:
    app: colors
---
apiVersion: v1
kind: Service
metadata:
  name: colors-blue
  labels:
    name: colors-blue
  namespace: meshdemo
spec:
  ports:
  - port: 8080
  selector:
    name: colors-blue
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: colors-blue
  namespace: meshdemo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: colors-blue
        app: colors
    spec:
      serviceAccountName: xray-access
      containers:
      - name: colors-blue
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/meshdemo/colors:1.0.0
        ports:
        - containerPort: 8080
        args: ["--color", "blue"]
      - name: xray-daemon
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/temporary/aws-xray-daemon:0.5
        securityContext:
          runAsUser: 1337
        ports:
        - containerPort: 2000
          name: xray
          protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
      - name: envoy
        image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.12.1.0-prod
        ports:
        - containerPort: 9901
          name: stats
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          runAsUser: 1337
      serviceAccountName: xray-access
      securityContext:
        fsGroup: 65534
---
apiVersion: v1
kind: Service
metadata:
  name: colors-green
  labels:
    name: colors-green
  namespace: meshdemo
spec:
  ports:
  - port: 8080
  selector:
    name: colors-green
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: colors-green
  namespace: meshdemo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: colors-green
        app: colors
    spec:
      serviceAccountName: xray-access
      containers:
      - name: colors-green
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/meshdemo/colors:1.0.0
        ports:
        - containerPort: 8080
        args: ["--color", "green"]
      - name: xray-daemon
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/temporary/aws-xray-daemon:0.5
        securityContext:
          runAsUser: 1337
        ports:
        - containerPort: 2000
          name: xray
          protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
      - name: envoy
        image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.12.1.0-prod
        ports:
        - containerPort: 9901
          name: stats
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          runAsUser: 1337
      serviceAccountName: xray-access
      securityContext:
        fsGroup: 65534
---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: colors
  namespace: meshdemo
spec:
  meshName: meshdemo
  virtualRouter:
    listeners:
      - portMapping:
          port: 8080
          protocol: http
  routes:
    - name: color-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: colors-blue
              weight: 1
