walkthroughs/howto-k8s-meshdemo/kubernetes/app/kustomize/base/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    name: frontend
  namespace: meshdemo
spec:
  ports:
  - port: 8000
  selector:
    name: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  namespace: meshdemo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: frontend
    spec:
      serviceAccountName: xray-access
      securityContext:
        fsGroup: 65534
      containers:
      - name: frontend
        imagePullPolicy: Always
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/meshdemo/frontend:1.0.0
        ports:
        - containerPort: 8000
        args: ["--rewrite", "/cats -> http://cats:8080", "--rewrite", "/colors -> http://colors:8080"]
      - name: xray-daemon
        image: 072792469044.dkr.ecr.eu-west-1.amazonaws.com/temporary/aws-xray-daemon:0.5
        securityContext:
          runAsUser: 1337
        ports:
        - containerPort: 2000
          name: xray
          protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
      - name: envoy
        image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.12.1.0-prod
        ports:
        - containerPort: 9901
          name: stats
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          runAsUser: 1337
---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: meshdemo
spec:
  meshName: meshdemo
  virtualRouter:
    listeners:
      - portMapping:
          port: 8000
          protocol: http
  routes:
    - name: frontend
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: frontend
              weight: 1
